# z4j

./: .env.example  CHANGELOG-1.x-legacy.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  docker-compose.caddy.yml  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  demo-deploy.yml  release-docker.yml  release.yml  security.yml
backend/: DOCKERHUB.md  Dockerfile
backend/src/z4j_brain/: __init__.py  allowed_hosts.py  audit_retention.py  cli.py  config_introspect.py  embedded_scheduler.py  errors.py  main.py  settings.py  startup.py  startup_version.py  wal_checkpoint.py
backend/src/z4j_brain/api/: __init__.py  _export.py  activity.py  admin_settings.py  agent_longpoll.py  agent_workers.py  agents.py  api_keys.py  audit.py  auth.py  auth_mfa.py  commands.py  deps.py  events.py  health.py  home.py  invitations.py  memberships.py  metrics.py  notifications.py  openapi_route.py  projects.py  queues.py  schedulers_fleet.py  schedules.py  setup.py  stats.py  system.py  tasks.py  trends.py  user_notifications.py  users.py  workers.py
backend/src/z4j_brain/auth/: passwords.py  sessions.py  trusted_device.py
backend/src/z4j_brain/data/: versions.json
backend/src/z4j_brain/docs/: audit-canonical-fields.md
backend/src/z4j_brain/domain/: audit_forwarder.py  audit_service.py  auth_service.py  event_ingestor.py  (+6 more)
backend/tests/integration/: test_end_to_end_loop.py  test_migration_pg.py
backend/tests/unit/: conftest.py  test_activity_endpoint.py  test_admin_settings_endpoint.py  test_agent_status_history.py  test_audit_forwarder.py  test_auth_endpoint.py  test_bulk_retry_audit_completeness_r10_l1.py  test_bulk_retry_filter_sanitization_r9_h1.py  test_frame_router_allowlist_drift.py  test_frame_router_heartbeat_e2e.py  test_health.py  test_host_validation.py  test_local_registry.py  test_migration.py  test_notifications_service_r7_m1.py  test_otel_observability.py  test_passwords.py  test_pending_fires.py  test_policy_engine.py  test_security_163.py  test_security_165.py  test_security_audit_1_4_0.py  test_security_audit_apr_2026.py  test_sentry_observability.py  test_setup_endpoint.py  test_subscription_create_global_admin.py  test_teams_dispatcher.py  test_v16_audit_forwarder_realtransport.py  test_v16_instrumentation_wiring.py  test_v16_round2_fixes.py  test_v16_round3_fixes.py  test_v16_round5_fixes.py  test_v16_round6_fixes.py  test_workers_repo_bulk_upsert.py
dashboard/: Dockerfile.dev  README.md  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/dist-demo/: _headers  index.html
dashboard/dist-demo/assets/: Combination-BMea7dpA.js  Combination-BMea7dpA.js.map  Combination-CzjSDCdT.js.map  Combination-DNbwKTKC.js  Combination-DNbwKTKC.js.map  Combination-GWrP0sUf.js  Combination-GWrP0sUf.js.map  _authenticated-BNgDSAW8.js  _authenticated-BNgDSAW8.js.map  _authenticated-Bp0YtrTb.js  _authenticated-Bp0YtrTb.js.map  _authenticated-DFy6BYOD.js  _authenticated-DFy6BYOD.js.map  _authenticated-JEnEiM7A.js  _authenticated-vpm4-QI-.js  _authenticated-vpm4-QI-.js.map  _authenticated.activity-CFaJt-D8.js  _authenticated.activity-CFaJt-D8.js.map  _authenticated.activity-CJQpmrhg.js  _authenticated.activity-CJQpmrhg.js.map  _authenticated.activity-eh0GhG7C.js  _authenticated.admin.schedulers-BrxQKoWs.js  _authenticated.admin.schedulers-BrxQKoWs.js.map  _authenticated.admin.schedulers-C4NQbU_3.js  _authenticated.admin.schedulers-CPTnC0pM.js  _authenticated.admin.schedulers-CPTnC0pM.js.map  _authenticated.admin.schedulers-ChxSOtvT.js  _authenticated.admin.schedulers-ChxSOtvT.js.map  _authenticated.admin.schedulers-DuSdWraJ.js  _authenticated.admin.schedulers-DuSdWraJ.js.map  _authenticated.home-3fqwusr-.js  _authenticated.home-3fqwusr-.js.map  _authenticated.home-BT6TpeAN.js  _authenticated.home-BT6TpeAN.js.map  _authenticated.home-BlAZVpTY.js  _authenticated.home-BlAZVpTY.js.map  _authenticated.home-DN1teSsR.js  _authenticated.home-DN1teSsR.js.map  _authenticated.home-FuMBNs6E.js  _authenticated.projects._slug-BRKO5BOW.js  (+1303 more)
dashboard/scripts/: build-demo.mjs  check-no-maps.mjs
dashboard/src/: vite-env.d.ts
dashboard/src/hooks/: use-activity.ts  use-auth.ts  use-dashboard-socket.ts  use-home.ts  use-invitations.ts  use-mfa.ts  use-notifications.ts  use-schedules.ts
dashboard/src/lib/: api-types.ts  api.demo.ts  api.ts  dashboard-socket.ts  demo-timestamps.ts  engine-capabilities.ts  format.ts  query-client.ts
dashboard/src/routes/: __root.tsx  _authenticated.activity.tsx  _authenticated.admin.schedulers.tsx  _authenticated.home.tsx  _authenticated.projects.$slug.agents.tsx  _authenticated.projects.$slug.audit.tsx  _authenticated.projects.$slug.commands.tsx  _authenticated.projects.$slug.index.tsx  _authenticated.projects.$slug.queues.tsx  _authenticated.projects.$slug.schedules.tsx  _authenticated.projects.$slug.schedules_.$scheduleId.tsx  _authenticated.projects.$slug.schedules_.reconcile.tsx  _authenticated.projects.$slug.settings.members.tsx  _authenticated.projects.$slug.settings.notifications.tsx  _authenticated.projects.$slug.settings.tsx  _authenticated.projects.$slug.tasks.tsx  _authenticated.projects.$slug.tasks_.$engine.$taskId.tsx  _authenticated.projects.$slug.trends.tsx  _authenticated.projects.$slug.tsx  _authenticated.projects.$slug.workers.tsx  _authenticated.projects.$slug.workers_.$workerId.tsx  _authenticated.settings.account.tsx  _authenticated.settings.api-keys.tsx  _authenticated.settings.appearance.tsx  _authenticated.settings.general.tsx  _authenticated.settings.memberships.tsx  _authenticated.settings.notifications.tsx  _authenticated.settings.projects.tsx  _authenticated.settings.runtime.tsx  _authenticated.settings.security.tsx  _authenticated.settings.system.tsx  _authenticated.settings.tsx  _authenticated.settings.users.tsx  _authenticated.tsx  index.tsx  login.tsx  login_.mfa.tsx
dashboard/tests/e2e/: README.md
dashboard/tests/unit/: engine-capabilities.test.ts
src/z4j/: __init__.py
(+160 files in other folders)
